feat: update Apache Beam pipeline code for improved clarity and execution

--- a/apache-beam/basics/main.ipynb
+++ b/apache-beam/basics/main.ipynb
@@ -2,13 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 25,
    "id": "67399839",
    "metadata": {},
    "outputs": [],
    "source": [
     "import apache_beam as beam\n",
-    "from apache_beam.runners.interactive.interactive_runner import InteractiveRunner"
+    "import apache_beam.runners.interactive.interactive_runner as ib\n",
+    "import apache_beam.runners.interactive.interactive_beam as ibm"
    ]
   },
   {
@@ -58,8 +59,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "c8416059",
+   "execution_count": 22,
+   "id": "f3fcfeb9",
    "metadata": {},
    "outputs": [
     {
@@ -68,20 +69,126 @@
        "apache_beam.pipeline.Pipeline"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "p1 = beam.Pipeline(InteractiveRunner())\n",
+    "p1 = beam.Pipeline(runner=ib.InteractiveRunner())\n",
     "type(p1)"
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "0e4b995f",
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "842bd955",
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "cubes = ( p1 \n",
+    "         | \"Create Element\" >> beam.Create(range(10)) # Step 1: Create a PCollection with numbers from 0 to 9\n",
+    "         | \"Find Cubes\" >> beam.Map(lambda x: x ** 3)) # Step 2: Map each number to its cube"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "e49a6f66",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<PCollection[[7]: Find Cubes.None] at 0x7f187d0dd6d0>"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cubes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "4fe17cda",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<apache_beam.runners.interactive.interactive_runner.PipelineResult at 0x7f187d06b8c0>"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "p1.run() # Execute the pipeline"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "f4e48dd1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "            <link rel=\"stylesheet\" href=\"https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css\" integrity=\"sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh\" crossorigin=\"anonymous\">\n",
+       "            <div id=\"progress_indicator_fe39dc05f482b0c58ce3aff6d255959e\">\n",
+       "              <div class=\"spinner-border text-info\" role=\"status\"></div>\n",
+       "              <span class=\"text-info\">Processing... show_graph</span>\n",
+       "            </div>\n",
+       "            "
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "digraph G {\n",
+       "node [color=blue, fontcolor=blue, shape=box];\n",
+       "}\n"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/javascript": "\n        if (typeof window.interactive_beam_jquery == 'undefined') {\n          var jqueryScript = document.createElement('script');\n          jqueryScript.src = 'https://code.jquery.com/jquery-3.4.1.slim.min.js';\n          jqueryScript.type = 'text/javascript';\n          jqueryScript.onload = function() {\n            var datatableScript = document.createElement('script');\n            datatableScript.src = 'https://cdn.datatables.net/1.10.20/js/jquery.dataTables.min.js';\n            datatableScript.type = 'text/javascript';\n            datatableScript.onload = function() {\n              window.interactive_beam_jquery = jQuery.noConflict(true);\n              window.interactive_beam_jquery(document).ready(function($){\n                \n            $(\"#progress_indicator_fe39dc05f482b0c58ce3aff6d255959e\").remove();\n              });\n            }\n            document.head.appendChild(datatableScript);\n          };\n          document.head.appendChild(jqueryScript);\n        } else {\n          window.interactive_beam_jquery(document).ready(function($){\n            \n            $(\"#progress_indicator_fe39dc05f482b0c58ce3aff6d255959e\").remove();\n          });\n        }"
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "ibm.show_graph(p1) # Display the graph of the pipeline"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8971eca5",
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
