fix: update execution counts and streamline pipeline code in Jupyter notebook

--- a/apache-beam/basics/main.ipynb
+++ b/apache-beam/basics/main.ipynb
@@ -2,13 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 50,
    "id": "67399839",
    "metadata": {},
    "outputs": [],
    "source": [
     "import apache_beam as beam\n",
-    "import apache_beam.runners.interactive.interactive_runner as ib\n",
     "import apache_beam.runners.interactive.interactive_beam as ibm"
    ]
   },
@@ -59,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 51,
    "id": "f3fcfeb9",
    "metadata": {},
    "outputs": [
@@ -69,62 +68,80 @@
        "apache_beam.pipeline.Pipeline"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "p1 = beam.Pipeline(runner=ib.InteractiveRunner())\n",
+    "p1 = beam.Pipeline()\n",
     "type(p1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 52,
    "id": "842bd955",
    "metadata": {},
    "outputs": [],
    "source": [
-    "cubes = ( p1 \n",
+    "find_cubes = ( p1 \n",
     "         | \"Create Element\" >> beam.Create(range(10)) # Step 1: Create a PCollection with numbers from 0 to 9\n",
-    "         | \"Find Cubes\" >> beam.Map(lambda x: x ** 3)) # Step 2: Map each number to its cube"
+    "         | \"Find Cubes\" >> beam.Map(lambda x: x ** 3) # Step 2: Map each number to its cube\n",
+    "           | \"Print Result\" >> beam.Map(print) # Step 3: Print each cube\n",
+    "         ) "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 53,
    "id": "e49a6f66",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<PCollection[[7]: Find Cubes.None] at 0x7f187d0dd6d0>"
+       "<PCollection[[52]: Print Result.None] at 0x7f1877c9ad20>"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "cubes"
+    "find_cubes"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 54,
    "id": "4fe17cda",
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "8\n",
+      "27\n",
+      "64\n",
+      "125\n",
+      "216\n",
+      "343\n",
+      "512\n",
+      "729\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "<apache_beam.runners.interactive.interactive_runner.PipelineResult at 0x7f187d06b8c0>"
+       "<apache_beam.runners.portability.fn_api_runner.fn_runner.RunnerResult at 0x7f1877a89760>"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -132,64 +149,6 @@
    "source": [
     "p1.run() # Execute the pipeline"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
-   "id": "f4e48dd1",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "\n",
-       "            <link rel=\"stylesheet\" href=\"https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css\" integrity=\"sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh\" crossorigin=\"anonymous\">\n",
-       "            <div id=\"progress_indicator_fe39dc05f482b0c58ce3aff6d255959e\">\n",
-       "              <div class=\"spinner-border text-info\" role=\"status\"></div>\n",
-       "              <span class=\"text-info\">Processing... show_graph</span>\n",
-       "            </div>\n",
-       "            "
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "digraph G {\n",
-       "node [color=blue, fontcolor=blue, shape=box];\n",
-       "}\n"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/javascript": "\n        if (typeof window.interactive_beam_jquery == 'undefined') {\n          var jqueryScript = document.createElement('script');\n          jqueryScript.src = 'https://code.jquery.com/jquery-3.4.1.slim.min.js';\n          jqueryScript.type = 'text/javascript';\n          jqueryScript.onload = function() {\n            var datatableScript = document.createElement('script');\n            datatableScript.src = 'https://cdn.datatables.net/1.10.20/js/jquery.dataTables.min.js';\n            datatableScript.type = 'text/javascript';\n            datatableScript.onload = function() {\n              window.interactive_beam_jquery = jQuery.noConflict(true);\n              window.interactive_beam_jquery(document).ready(function($){\n                \n            $(\"#progress_indicator_fe39dc05f482b0c58ce3aff6d255959e\").remove();\n              });\n            }\n            document.head.appendChild(datatableScript);\n          };\n          document.head.appendChild(jqueryScript);\n        } else {\n          window.interactive_beam_jquery(document).ready(function($){\n            \n            $(\"#progress_indicator_fe39dc05f482b0c58ce3aff6d255959e\").remove();\n          });\n        }"
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "ibm.show_graph(p1) # Display the graph of the pipeline"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8971eca5",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
