feat: apache beam keys,values,strings

--- a/apache-beam/basics/main.ipynb
+++ b/apache-beam/basics/main.ipynb
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "062adbf3",
    "metadata": {},
    "outputs": [
@@ -203,8 +203,113 @@
     "     return element ** 3\n",
     "\n",
     "findcube = (p1 | \n",
-    "            \"Crete Element\" >> Create([\"foo bar\", \"hello world\"]) \n",
+    "            \"Create Element\" >> Create([\"foo bar\", \"hello world\"]) \n",
     "            | \"Find Cube\" >> FlatMap(str.split)\n",
+    "            | \"Print\" >> Map(print)\n",
+    "            )\n",
+    "\n",
+    "p1.run() "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6015fb8f",
+   "metadata": {},
+   "source": [
+    "# Filter"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "911a63e4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "2\n",
+      "4\n",
+      "6\n",
+      "8\n",
+      "10\n",
+      "12\n",
+      "14\n",
+      "16\n",
+      "18\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<apache_beam.runners.portability.fn_api_runner.fn_runner.RunnerResult at 0x7f4d5ea3d910>"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import apache_beam as beam\n",
+    "from apache_beam import Create, Map, Filter\n",
+    "\n",
+    "p1 = beam.Pipeline()\n",
+    "\n",
+    "findcube = (p1 | \n",
+    "            \"Create Element\" >> Create(range(20)) \n",
+    "            | \"Find Even numbers\" >> Filter(lambda x: x % 2 == 0)\n",
+    "            | \"Print\" >> Map(print)\n",
+    "            )\n",
+    "\n",
+    "p1.run() "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e8b02568",
+   "metadata": {},
+   "source": [
+    "# Keys, values, string"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "0ed6665b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "foo\n",
+      "hello\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<apache_beam.runners.portability.fn_api_runner.fn_runner.RunnerResult at 0x7f4d5e711040>"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import apache_beam as beam\n",
+    "from apache_beam import Create, Map, Filter\n",
+    "\n",
+    "p1 = beam.Pipeline()\n",
+    "\n",
+    "findcube = (p1 | \n",
+    "            \"Create Element\" >> Create({\"foo\": \"bar\",\"hello\": \"world\"}) \n",
+    "            | \"All Keys\" >> beam.Keys()\n",
+    "            | \"String tuple\" >> beam.ToString.Element()\n",
     "            | \"Print\" >> Map(print)\n",
     "            )\n",
     "\n",
@@ -214,7 +319,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "911a63e4",
+   "id": "f8ab4ff4",
    "metadata": {},
    "outputs": [],
    "source": []
