--- a/apache-beam/basics/main.ipynb
+++ b/apache-beam/basics/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 2,
    "id": "67399839",
    "metadata": {},
    "outputs": [],
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 3,
    "id": "f3fcfeb9",
    "metadata": {},
    "outputs": [
@@ -68,7 +68,7 @@
        "apache_beam.pipeline.Pipeline"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -80,31 +80,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 7,
    "id": "842bd955",
    "metadata": {},
    "outputs": [],
    "source": [
     "find_cubes = ( p1 \n",
-    "         | \"Create Element\" >> beam.Create(range(10)) # Step 1: Create a PCollection with numbers from 0 to 9\n",
+    "         | \"Create Element\" >> beam.Create([1,5,8]) # Step 1: Create a PCollection with numbers from 0 to 9\n",
     "         | \"Find Cubes\" >> beam.Map(lambda x: x ** 3) # Step 2: Map each number to its cube\n",
     "           | \"Print Result\" >> beam.Map(print) # Step 3: Print each cube\n",
-    "         ) "
+    "         ) \n",
+    "# We can also add another data types like\n",
+    "# beam.Create({'foo':'bar'})\n",
+    "# beam.Create(range(10))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 5,
    "id": "e49a6f66",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<PCollection[[52]: Print Result.None] at 0x7f1877c9ad20>"
+       "<PCollection[[4]: Print Result.None] at 0x7f9efc17b0e0>"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -115,40 +118,88 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 10,
    "id": "4fe17cda",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#p1.run() # Execute the pipeline"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f4afbe78",
+   "metadata": {},
+   "source": [
+    "# Flatten\n",
+    "\n",
+    "Flatten is a transformation that combines multiple PCollections of the same type into a single PCollection."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "a7466de2",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0\n",
       "1\n",
-      "8\n",
-      "27\n",
-      "64\n",
       "125\n",
-      "216\n",
-      "343\n",
       "512\n",
-      "729\n"
+      "1\n",
+      "125\n",
+      "512\n",
+      "1\n",
+      "3\n",
+      "5\n",
+      "7\n",
+      "9\n",
+      "8\n",
+      "2\n",
+      "4\n",
+      "6\n",
+      "8\n",
+      "2\n",
+      "4\n",
+      "6\n",
+      "1\n",
+      "3\n",
+      "5\n",
+      "7\n",
+      "9\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<apache_beam.runners.portability.fn_api_runner.fn_runner.RunnerResult at 0x7f1877a89760>"
+       "<apache_beam.runners.portability.fn_api_runner.fn_runner.RunnerResult at 0x7f9ef6b38e90>"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "p1.run() # Execute the pipeline"
+    "even = {2,4,6,8}\n",
+    "odd = {1,3,5,7,9}\n",
+    "\n",
+    "even_p1 = p1 | \"Even Numb:\" >> beam.Create(even)\n",
+    "odd_p1 = p1 | \"Odd Numb:\" >> beam.Create(odd)\n",
+    "flat_out = (even_p1,odd_p1) | beam.Flatten() | beam.Map(print)\n",
+    "p1.run() \n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "00f15fa2",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
