--- a/apache-beam/basics/main.ipynb
+++ b/apache-beam/basics/main.ipynb
@@ -77,7 +77,7 @@
     {
      "data": {
       "text/plain": [
-       "<apache_beam.runners.portability.fn_api_runner.fn_runner.RunnerResult at 0x7f4d64ad5100>"
+       "<apache_beam.runners.portability.fn_api_runner.fn_runner.RunnerResult at 0x75d978ab9c60>"
       ]
      },
      "execution_count": 2,
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "a7466de2",
    "metadata": {},
    "outputs": [
@@ -120,24 +120,24 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "8\n",
-      "2\n",
-      "4\n",
-      "6\n",
       "1\n",
       "3\n",
       "5\n",
       "7\n",
-      "9\n"
+      "9\n",
+      "8\n",
+      "2\n",
+      "4\n",
+      "6\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<apache_beam.runners.portability.fn_api_runner.fn_runner.RunnerResult at 0x7f4d64286f00>"
+       "<apache_beam.runners.portability.fn_api_runner.fn_runner.RunnerResult at 0x75d978896320>"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "062adbf3",
    "metadata": {},
    "outputs": [
@@ -185,10 +185,10 @@
     {
      "data": {
       "text/plain": [
-       "<apache_beam.runners.portability.fn_api_runner.fn_runner.RunnerResult at 0x7f4d64e9bb00>"
+       "<apache_beam.runners.portability.fn_api_runner.fn_runner.RunnerResult at 0x75d976e29ab0>"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -199,10 +199,8 @@
     "\n",
     "p1 = beam.Pipeline()\n",
     "\n",
-    "def findcube(element):\n",
-    "     return element ** 3\n",
     "\n",
-    "findcube = (p1 | \n",
+    "flatten_elements = (p1 | \n",
     "            \"Create Element\" >> Create([\"foo bar\", \"hello world\"]) \n",
     "            | \"Find Cube\" >> FlatMap(str.split)\n",
     "            | \"Print\" >> Map(print)\n",
@@ -221,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "911a63e4",
    "metadata": {},
    "outputs": [
@@ -244,10 +242,10 @@
     {
      "data": {
       "text/plain": [
-       "<apache_beam.runners.portability.fn_api_runner.fn_runner.RunnerResult at 0x7f4d5ea3d910>"
+       "<apache_beam.runners.portability.fn_api_runner.fn_runner.RunnerResult at 0x75d976e2b2b0>"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -258,7 +256,7 @@
     "\n",
     "p1 = beam.Pipeline()\n",
     "\n",
-    "findcube = (p1 | \n",
+    "filter_even = (p1 | \n",
     "            \"Create Element\" >> Create(range(20)) \n",
     "            | \"Find Even numbers\" >> Filter(lambda x: x % 2 == 0)\n",
     "            | \"Print\" >> Map(print)\n",
@@ -277,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 15,
    "id": "0ed6665b",
    "metadata": {},
    "outputs": [
@@ -292,10 +290,10 @@
     {
      "data": {
       "text/plain": [
-       "<apache_beam.runners.portability.fn_api_runner.fn_runner.RunnerResult at 0x7f4d5e711040>"
+       "<apache_beam.runners.portability.fn_api_runner.fn_runner.RunnerResult at 0x75d976e2ab00>"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -306,7 +304,7 @@
     "\n",
     "p1 = beam.Pipeline()\n",
     "\n",
-    "findcube = (p1 | \n",
+    "dict_elements = (p1 | \n",
     "            \"Create Element\" >> Create({\"foo\": \"bar\",\"hello\": \"world\"}) \n",
     "            | \"All Keys\" >> beam.Keys()\n",
     "            | \"String tuple\" >> beam.ToString.Element()\n",
@@ -317,9 +315,157 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "92b14252",
+   "metadata": {},
+   "source": [
+    "# Kvswap\n",
+    "\n",
+    "You give a key-value pair and it returns a value-key pair swapped."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "f8ab4ff4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('bar', 'foo')\n",
+      "('world', 'hello')\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<apache_beam.runners.portability.fn_api_runner.fn_runner.RunnerResult at 0x75d976ec5630>"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import apache_beam as beam\n",
+    "from apache_beam import Create, Map, Filter, KvSwap, FlatMap\n",
+    "\n",
+    "p1 = beam.Pipeline()\n",
+    "\n",
+    "swap_elements = (p1 | \n",
+    "            \"Create Element\" >> Create({\"foo\": \"bar\",\"hello\": \"world\"}) \n",
+    "            | \"Swap elements\" >> KvSwap()\n",
+    "           #(Optional) | \"Flatten\" >> FlatMap(lambda x: x)  # Flatten the key-value pairs into a single list\n",
+    "            | \"Print\" >> Map(print)\n",
+    "            )\n",
+    "\n",
+    "p1.run() "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "162426f9",
+   "metadata": {},
+   "source": [
+    "# Partition\n",
+    "\n",
+    "Partition is a transformation that splits a PCollection into multiple PCollections based on a partitioning function."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "38bd144b",
+   "metadata": {},
+   "source": [
+    "# Aggregation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "01484d09",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('foo', 1)\n",
+      "('hello', 1)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<apache_beam.runners.portability.fn_api_runner.fn_runner.RunnerResult at 0x75d976caa530>"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import apache_beam as beam\n",
+    "from apache_beam import Create, Map, combiners\n",
+    "\n",
+    "p1 = beam.Pipeline()\n",
+    "\n",
+    "count_elements = (p1 | \n",
+    "            \"Create Element\" >> Create({\"foo\": \"bar\",\"hello\": \"world\"}) \n",
+    "            | \"Count\" >> combiners.Count.PerKey()  # Count occurrences of each key\n",
+    "            | \"Print\" >> Map(print)\n",
+    "            )\n",
+    "\n",
+    "p1.run() "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f8ab4ff4",
+   "id": "603e5b8c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('one+one', 2)\n",
+      "('one+three', 4)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<apache_beam.runners.portability.fn_api_runner.fn_runner.RunnerResult at 0x75d976a1b730>"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import apache_beam as beam\n",
+    "from apache_beam import Create, Map, combiners, CombineValues\n",
+    "\n",
+    "p1 = beam.Pipeline()\n",
+    "combine_values = (p1 | \n",
+    "            \"Create Element\" >> Create({\"one+one\": [1,1],\"one+three\": [1,3]}) \n",
+    "            | \"Count\" >> CombineValues(lambda x: sum(x))\n",
+    "            | \"Print\" >> Map(print)\n",
+    "            )\n",
+    "\n",
+    "p1.run() "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4a8b4ab4",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -341,7 +487,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
