feat: add vertexai_start module and initialize Vertex AI with environment variables

--- a/vertex-ai/vertexai_text_generation.ipynb
+++ b/vertex-ai/vertexai_text_generation.ipynb
@@ -2,29 +2,33 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "09294228-5628-47e4-9dcb-657ce12c86c3",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/diogo/miniconda3/envs/vertexai_env/lib/python3.9/site-packages/requests/__init__.py:86: RequestsDependencyWarning: Unable to find acceptable character detection dependency (chardet or charset_normalizer).\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Vertex AI initialized with project: gcp-network-452116, region: us-central1\n"
+     ]
+    }
+   ],
    "source": [
-    "# Init notebook\n",
-    "from google.auth.transport.requests import Request\n",
-    "from google.oauth2.service_account import Credentials\n",
-    "import vertexai\n",
-    "import os\n",
-    "os.environ[\"GOOGLE_APPLICATION_CREDENTIALS\"] = \"/home/diogo/Repos/github.com/diogoguedes11/lab/vertex-ai/gcp-network-452116-7c78a1eff948.json\"\n",
-    "api_key_path = os.getenv(\"GOOGLE_APPLICATION_CREDENTIALS\")\n",
-    "if not api_key_path:\n",
-    "     raise ValueError(\"Key not set.\")\n",
-    "credentials = Credentials.from_service_account_file(api_key_path,scopes=['https://www.googleapis.com/auth/cloud-platform'])\n",
-    "PROJECT_ID=os.getenv(\"VERTEXT_PROJECT_ID\")\n",
-    "REGION=os.getenv(\"VERTEX_REGION\")\n",
-    "vertexai.init(project=PROJECT_ID,location=REGION,credentials=credentials)"
+    "import vertexai_start"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "id": "d925e5f5-49db-4470-b283-5691c15fb2e7",
    "metadata": {},
    "outputs": [
@@ -44,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "id": "ad57e512",
    "metadata": {},
    "outputs": [
@@ -54,7 +58,7 @@
        "'Lisbon.'"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -74,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "id": "3c252b58",
    "metadata": {},
    "outputs": [],
@@ -84,17 +88,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "id": "7fd9c21e",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Builds and deploys AI systems.'"
+       "'Designs, builds, and deploys AI systems.'"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -106,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
    "id": "a2c73e5b",
    "metadata": {},
    "outputs": [
@@ -120,18 +124,10 @@
        " role: \"model\"\n",
        " parts {\n",
        "   text: \"Designs, builds, and deploys AI systems.\"\n",
-       " },\n",
-       " role: \"user\"\n",
-       " parts {\n",
-       "   text: \"In a few words explain what a AI engineer is\"\n",
-       " },\n",
-       " role: \"model\"\n",
-       " parts {\n",
-       "   text: \"Builds and deploys AI systems.\"\n",
        " }]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
