refactor: update execution counts and enhance output handling in vertexai_text_embedding notebook

--- a/vertex-ai/vertexai_text_embedding.ipynb
+++ b/vertex-ai/vertexai_text_embedding.ipynb
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "7aa7adce",
    "metadata": {},
    "outputs": [
@@ -60,7 +60,7 @@
     }
    ],
    "source": [
-    "en_model = TextEmbeddingModel.from_pretrained(\"gemini-embedding-001\") \n",
+    "en_model = TextEmbeddingModel.from_pretrained(\"gemini-embedding-001\") # text-multilingual-embedding-002\tfor multilingual in/ouputs \n",
     "embed_1 = en_model.get_embeddings([\"What is life?\"])\n",
     "embed_2 = en_model.get_embeddings([\"What is the purpose of life?\"])"
    ]
@@ -1120,8 +1120,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "3d6e6f06",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "np.float64(0.7256425928902285)"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "embed_combined = en_model.get_embeddings([\"banana\",\"apple\"])\n",
+    "print(len(embed_combined))\n",
+    "np.dot(embed_combined[0].values,embed_combined[1].values) # Cosine similarity"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3500f212",
    "metadata": {},
    "outputs": [],
    "source": []
