refactor: update execution counts and remove deprecated output handling in vertexai_text_embedding notebook

--- a/vertex-ai/vertexai_text_embedding.ipynb
+++ b/vertex-ai/vertexai_text_embedding.ipynb
@@ -10,33 +10,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "id": "1185e78a",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/diogo/miniconda3/envs/vertexai_env/lib/python3.9/site-packages/requests/__init__.py:86: RequestsDependencyWarning: Unable to find acceptable character detection dependency (chardet or charset_normalizer).\n",
-      "  warnings.warn(\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Vertex AI initialized\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import vertexai_start"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "id": "e38260f0",
    "metadata": {},
    "outputs": [],
@@ -46,19 +30,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "7aa7adce",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/diogo/miniconda3/envs/vertexai_env/lib/python3.9/site-packages/vertexai/_model_garden/_model_garden_models.py:278: UserWarning: This feature is deprecated as of June 24, 2025 and will be removed on June 24, 2026. For details, see https://cloud.google.com/vertex-ai/generative-ai/docs/deprecations/genai-vertexai-sdk.\n",
-      "  warning_logs.show_deprecation_warning()\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "en_model = TextEmbeddingModel.from_pretrained(\"gemini-embedding-001\") # text-multilingual-embedding-002\tfor multilingual in/ouputs \n",
     "embed_1 = en_model.get_embeddings([\"What is life?\"])\n",
@@ -67,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "id": "2ddc34ff",
    "metadata": {},
    "outputs": [
@@ -1077,7 +1052,7 @@
        " ...]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1089,7 +1064,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "id": "cc0c656e",
    "metadata": {},
    "outputs": [],
@@ -1099,7 +1074,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "2bad7b07",
    "metadata": {},
    "outputs": [
@@ -1109,7 +1084,7 @@
        "np.float64(0.6921740630891202)"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1120,7 +1095,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 12,
    "id": "3d6e6f06",
    "metadata": {},
    "outputs": [
@@ -1137,7 +1112,7 @@
        "np.float64(0.7256425928902285)"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1149,12 +1124,106 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "972da231",
+   "metadata": {},
+   "source": [
+    "# Task type"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a302ec0d",
+   "metadata": {},
+   "source": [
+    "# Practical Example\n",
+    "\n",
+    "use embedding to match questions with answers in a knowledge base."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "3500f212",
+   "execution_count": 22,
+   "id": "908b98c8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/diogo/miniconda3/envs/vertexai_env/lib/python3.9/site-packages/vertexai/_model_garden/_model_garden_models.py:278: UserWarning: This feature is deprecated as of June 24, 2025 and will be removed on June 24, 2026. For details, see https://cloud.google.com/vertex-ai/generative-ai/docs/deprecations/genai-vertexai-sdk.\n",
+      "  warning_logs.show_deprecation_warning()\n"
+     ]
+    }
+   ],
+   "source": [
+    "from vertexai.language_models import TextEmbeddingInput, TextEmbeddingModel\n",
+    "en_model = TextEmbeddingModel.from_pretrained(\"gemini-embedding-001\") # text-multilingual-embedding-002\tfor multilingual in/ouputs \n",
+    "question = TextEmbeddingInput(\"Who is Peter parker?\",task_type=\"QUESTION_ANSWERING\")\n",
+    "question_output = en_model.get_embeddings([question])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "36ca09bd",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Create a knowledge base (FAQ)\n",
+    "knowledge_base = [\n",
+    "    \"Peter Parker is Spider-Man, a superhero from Marvel Comics\",\n",
+    "    \"Spider-Man has spider powers like wall crawling and web shooting\",\n",
+    "    \"Peter Parker works as a photographer for the Daily Bugle\",\n",
+    "    \"Spider-Man's real identity is Peter Benjamin Parker\",\n",
+    "    \"Peter Parker was bitten by a radioactive spider\"\n",
+    "]\n",
+    "\n",
+    "# Get embeddings for each answer in the knowledge base\n",
+    "kb_inputs = [TextEmbeddingInput(text, task_type=\"RETRIEVAL_DOCUMENT\") for text in knowledge_base]\n",
+    "kb_embeddings = en_model.get_embeddings(kb_inputs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "e7076e0f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Question: Who is Peter Parker?\n",
+      "Best answer: Peter Parker is Spider-Man, a superhero from Marvel Comics (similarity: 0.7443)\n",
+      "\n",
+      "All matches:\n",
+      "  0.7443: Peter Parker is Spider-Man, a superhero from Marvel Comics\n",
+      "  0.7183: Spider-Man's real identity is Peter Benjamin Parker\n",
+      "  0.7141: Peter Parker was bitten by a radioactive spider\n",
+      "  0.6961: Peter Parker works as a photographer for the Daily Bugle\n",
+      "  0.6779: Spider-Man has spider powers like wall crawling and web shooting\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Compare question with knowledge base\n",
+    "question_embedding = question_output[0].values  # \"Who is Peter Parker?\" embedding\n",
+    "\n",
+    "similarities = []\n",
+    "for i, kb_embed in enumerate(kb_embeddings):\n",
+    "    similarity = np.dot(question_embedding, kb_embed.values)\n",
+    "    similarities.append((similarity, knowledge_base[i]))\n",
+    "\n",
+    "# Sort by similarity (highest first)\n",
+    "similarities.sort(reverse=True)\n",
+    "\n",
+    "print(\"Question: Who is Peter Parker?\")\n",
+    "print(f\"Best answer: {similarities[0][1]} (similarity: {similarities[0][0]:.4f})\")\n",
+    "print(\"\\nAll matches:\")\n",
+    "for sim, answer in similarities:\n",
+    "    print(f\"  {sim:.4f}: {answer}\")"
+   ]
   }
  ],
  "metadata": {
