docs: add explanation for using embeddings in question-answering systems

--- a/vertex-ai/vertexai_text_embedding.ipynb
+++ b/vertex-ai/vertexai_text_embedding.ipynb
@@ -1142,6 +1142,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "145fceac",
+   "metadata": {},
+   "source": [
+    "This approach is the foundation for building more complex question-answering systems using embeddings like ChatGPT."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 22,
    "id": "908b98c8",
