feat: multi modal example

--- a/vertex-ai/vertexai_multimodelprocessing.ipynb
+++ b/vertex-ai/vertexai_multimodelprocessing.ipynb
@@ -68,13 +68,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "be70332f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "candidates {\n",
+       "  content {\n",
+       "    role: \"model\"\n",
+       "    parts {\n",
+       "      text: \"Here are the fruits in the image:\\n\\n*   Strawberries: 2\\n*   Flat peach: 1\\n*   Lemon: 1\"\n",
+       "    }\n",
+       "  }\n",
+       "  finish_reason: STOP\n",
+       "  avg_logprobs: -1.8912439653950353\n",
+       "}\n",
+       "usage_metadata {\n",
+       "  prompt_token_count: 1305\n",
+       "  candidates_token_count: 31\n",
+       "  total_token_count: 1664\n",
+       "  prompt_tokens_details {\n",
+       "    modality: IMAGE\n",
+       "    token_count: 1290\n",
+       "  }\n",
+       "  prompt_tokens_details {\n",
+       "    modality: TEXT\n",
+       "    token_count: 15\n",
+       "  }\n",
+       "  candidates_tokens_details {\n",
+       "    modality: TEXT\n",
+       "    token_count: 31\n",
+       "  }\n",
+       "  thoughts_token_count: 328\n",
+       "}\n",
+       "model_version: \"gemini-2.5-flash\"\n",
+       "create_time {\n",
+       "  seconds: 1756886826\n",
+       "  nanos: 290173000\n",
+       "}\n",
+       "response_id: \"Kve3aP3aEYuBm9IPyqSKEQ\""
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "model = GenerativeModel(\"gemini-2.5-flash\")\n",
-    "prompt = \"Describe the image in detail and explain why these fruits are beneficial for health.\"\n",
+    "prompt = \"List and count all fruits in the image in bullet points in few words.\"\n",
     "model.generate_content([image_file, prompt])"
    ]
   },
