feat: enhance multi-model processing with additional image handling and output details

--- a/vertex-ai/vertexai_multimodelprocessing.ipynb
+++ b/vertex-ai/vertexai_multimodelprocessing.ipynb
@@ -123,17 +123,76 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1f5c6632",
+   "cell_type": "markdown",
+   "id": "97fb3b3d",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Multiple image processing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "b83ad33d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "candidates {\n",
+       "  content {\n",
+       "    role: \"model\"\n",
+       "    parts {\n",
+       "      text: \"Colorful wooden blocks are arranged into an abstract structure in one image, and neatly stacked into a pyramid in the other.\"\n",
+       "    }\n",
+       "  }\n",
+       "  finish_reason: STOP\n",
+       "  avg_logprobs: -11.042838718580162\n",
+       "}\n",
+       "usage_metadata {\n",
+       "  prompt_token_count: 524\n",
+       "  candidates_token_count: 23\n",
+       "  total_token_count: 1336\n",
+       "  prompt_tokens_details {\n",
+       "    modality: IMAGE\n",
+       "    token_count: 516\n",
+       "  }\n",
+       "  prompt_tokens_details {\n",
+       "    modality: TEXT\n",
+       "    token_count: 8\n",
+       "  }\n",
+       "  candidates_tokens_details {\n",
+       "    modality: TEXT\n",
+       "    token_count: 23\n",
+       "  }\n",
+       "  thoughts_token_count: 789\n",
+       "}\n",
+       "model_version: \"gemini-2.5-flash\"\n",
+       "create_time {\n",
+       "  seconds: 1756887536\n",
+       "  nanos: 785440000\n",
+       "}\n",
+       "response_id: \"8Pm3aKD4L5CVmecPyqPo6AI\""
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "url_block1 = \"https://storage.googleapis.com/cloud-samples-data/generative-ai/image/blocks-1.jpg\"\n",
+    "url_block2 = \"https://storage.googleapis.com/cloud-samples-data/generative-ai/image/blocks-2.jpg\"\n",
+    "image_file_block1 = Part.from_uri(url_block1,mime_type=\"image/jpg\")\n",
+    "image_file_block2 = Part.from_uri(url_block2,mime_type=\"image/jpg\")\n",
+    "prompt = \"Describe both images in just one sentence.\"\n",
+    "model.generate_content([image_file_block1,image_file_block2,prompt])"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "71bce19b",
+   "id": "746fff40",
    "metadata": {},
    "outputs": [],
    "source": []
