feat: update video and audio processing outputs for clarity and conciseness

--- a/vertex-ai/vertexai_multimodelprocessing.ipynb
+++ b/vertex-ai/vertexai_multimodelprocessing.ipynb
@@ -199,53 +199,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 26,
    "id": "746fff40",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "candidates {\n",
-       "  content {\n",
-       "    role: \"model\"\n",
-       "    parts {\n",
-       "      text: \"A man in a black shirt and shorts is actively rock climbing indoors, navigating the colorful holds on a climbing wall and clipping his rope into quickdraws.\"\n",
-       "    }\n",
-       "  }\n",
-       "  finish_reason: STOP\n",
-       "  avg_logprobs: -1.3604648590087891\n",
-       "}\n",
-       "usage_metadata {\n",
-       "  prompt_token_count: 3621\n",
-       "  candidates_token_count: 30\n",
-       "  total_token_count: 3733\n",
-       "  prompt_tokens_details {\n",
-       "    modality: VIDEO\n",
-       "    token_count: 3612\n",
-       "  }\n",
-       "  prompt_tokens_details {\n",
-       "    modality: TEXT\n",
-       "    token_count: 9\n",
-       "  }\n",
-       "  prompt_tokens_details {\n",
-       "    modality: AUDIO\n",
-       "  }\n",
-       "  candidates_tokens_details {\n",
-       "    modality: TEXT\n",
-       "    token_count: 30\n",
-       "  }\n",
-       "  thoughts_token_count: 82\n",
-       "}\n",
-       "model_version: \"gemini-2.5-flash\"\n",
-       "create_time {\n",
-       "  seconds: 1756887845\n",
-       "  nanos: 706058000\n",
-       "}\n",
-       "response_id: \"Jfu3aIqMK5WXmecP_fqYmQ8\""
+       "'A man skillfully ascends an indoor climbing wall, clipping his rope into quickdraws as he progresses.'"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -254,7 +218,8 @@
     "video_url = \"https://storage.googleapis.com/cloud-samples-data/generative-ai/video/describe_video_content.mp4\"\n",
     "video_file = Part.from_uri(video_url,mime_type=\"video/mp4\")\n",
     "prompt = \"Describe the video content in just one sentence.\"\n",
-    "model.generate_content([video_file,prompt])"
+    "response = model.generate_content([video_file,prompt])\n",
+    "response.text"
    ]
   },
   {
@@ -267,50 +232,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 23,
    "id": "8a0f8e6f",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "candidates {\n",
-       "  content {\n",
-       "    role: \"model\"\n",
-       "    parts {\n",
-       "      text: \"Gemini introduces themself and expresses their readiness and enthusiasm to embark on an exciting journey to create something amazing.\"\n",
-       "    }\n",
-       "  }\n",
-       "  finish_reason: STOP\n",
-       "  avg_logprobs: -1.6805676051548548\n",
-       "}\n",
-       "usage_metadata {\n",
-       "  prompt_token_count: 285\n",
-       "  candidates_token_count: 21\n",
-       "  total_token_count: 433\n",
-       "  prompt_tokens_details {\n",
-       "    modality: TEXT\n",
-       "    token_count: 10\n",
-       "  }\n",
-       "  prompt_tokens_details {\n",
-       "    modality: AUDIO\n",
-       "    token_count: 275\n",
-       "  }\n",
-       "  candidates_tokens_details {\n",
-       "    modality: TEXT\n",
-       "    token_count: 21\n",
-       "  }\n",
-       "  thoughts_token_count: 127\n",
-       "}\n",
-       "model_version: \"gemini-2.5-flash\"\n",
-       "create_time {\n",
-       "  seconds: 1756888073\n",
-       "  nanos: 759872000\n",
-       "}\n",
-       "response_id: \"Cfy3aMCwLv-Tm9IPsbWS2AY\""
+       "'The speaker, introducing themselves as Gemini, expresses their enthusiasm and readiness to create something amazing with the listener.'"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -319,7 +251,8 @@
     "audio_url = 'https://storage.googleapis.com/cloud-samples-data/generative-ai/audio/Charon_prompt_sample.wav'\n",
     "audio_file = Part.from_uri(audio_url,mime_type=\"audio/wav\")\n",
     "prompt = \"Summarize the audio for me in one sentence.\"\n",
-    "model.generate_content([audio_file,prompt])"
+    "response = model.generate_content([audio_file,prompt])\n",
+    "response.text"
    ]
   },
   {
